
Major Enhancements:

Other improvements from previous release:

Caveats:
* Queueing of requests in case of resource shortage is not perfect yet,
  some requests may not be processed in order.
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 0.7.0 (June 27th 2008, svn r1806)
=========================================
The Binary Compatibility release.

Major Enhancements:
* Add binary compatibility with MX (from MX version 0.9).
  + The 32bits ABI has changed, applications may have to
    be rebuilt on these architectures.

Other improvements from previous release:
* Fix hostname resolution wire compatibility with MX.
* Fix hostname resolution problems on multi-NICs machines.
* Fix enabling of FMA build/install.
* Fix resending of medium messages that were early completed and
  freed by the application.
* Fix interface removal when a peer discovery program is running.
* Fix driver oops when trying to use interfaces that do not
  provide ethtool ops.
* Fix the init script to be called in all runlevels.
* Add the ability to test/wait_any across multiple context ids.

Open-MX 0.6.0 (May 20th 2008, svn r1727)
========================================
The Dynamic Peer Discovery release.

Major Enhancements:
* Add dynamic peer discovery with the omxoed tool. It is automatically
  started by omx_init when loading the module. Also add support for
  Myricom's FMA peer discovery (MX-wire-compatible) when its source is
  unpacked within the Open-MX source. Static peer table setup is still
  possible on demand.
* Improve large message performance in MX-wire-compatible mode, almost
  achieving the same performance than in non-wire-compatible mode.

Other improvements from previous release:
* Restore the iface status to valid when failing to detach because some
  endpoints were still open.
* Fix useless resending of the last frames of large messages.